--- a/index.html
+++ b/index.html
@@ -84,22 +84,28 @@
     </div>
 
 
-    <div class="quote-text">
-        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
-        people will
-        actually read it. Who knows? All I know is that it looks nice.
-        <div class="quote-author">
-            - Thor, God of Thunder
+    <div class="quote">
+        <div class="quote-text">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+            people will
+            actually read it. Who knows? All I know is that it looks nice.
+            <div class="quote-author">
+                - Thor, God of Thunder
+            </div>
         </div>
     </div>
 
-    <div class="call-title">
-        Call to action! it's time!
-        <div class="call-subtext">
-            Sign up for our product by clicking the button right over there!
+    <div class="call-to-action">
+        <div class="call-container">
+            <div class="call-title">
+                Call to action! it's time!
+                <div class="call-subtext">
+                    Sign up for our product by clicking the button right over there!
+                </div>
+            </div>
+            <button class="call-sign-up">Sign up</button>
         </div>
     </div>
-    <button class="call-sign-up">Sign up</button>
 
     <div class="footer-text"> Copyright © The Odin Project 2022</div>
 
